# tracer

./: LICENSE  README.md  meson.build
data/: com.github.z0uk.tracer.desktop  com.github.z0uk.tracer.desktop.in  com.github.z0uk.tracer.gschema.xml  com.github.z0uk.tracer.metainfo.xml  com.github.z0uk.vtracer-gtk.desktop.in  com.github.z0uk.vtracer-gtk.gschema.xml  com.github.z0uk.vtracer-gtk.metainfo.xml
flatpak/: com.github.z0uk.tracer.yml  com.github.z0uk.vtracer-gtk.yml
src/: __init__.py  app.py  batch.py  converter.py  image_preview.py  main.py.in  optimizer.py  settings_panel.py  window.py
